--- a/content/post/2021-08-19-when-yahoo-finance-doesn-t-have-de-listed-tickers-needed/index.Rmd
+++ b/content/post/2021-08-19-when-yahoo-finance-doesn-t-have-de-listed-tickers-needed/index.Rmd
@@ -34,7 +34,7 @@ knitr::opts_chunk$set(
 Introduction {#introduction}
 ============
 
-As we discussed in our last post [Introducing the Redwall 'Red Flag' Explorer with New Constructs Data](https://redwallanalytics.com/2021/08/09/introducing-the-redwall-red-flag-analyzer-with-new-constructs-data/), we were able to test the response of 125,000 quarterly and annual financial statements to incidence of "red flag" ratios, but some of the most interesting results may have been hidden in de-listed tickers, often not available to the default R `{quantmod}` pricing sources (Yahoo Finance and Alpha Vantage). As a result, 15-25% of financial statements in New Constructs the first five years of New Constructs' data, could not be matched to return history, exposing our analysis to "survivor bias". Redwall's mission is multifaceted: to conduct research on topic of interest in available financial and government data, but also to explore and share how to best solve problems encountered while using R.
+As we discussed in our last post [Introducing the Redwall 'Red Flag' Explorer with New Constructs Data](https://redwallanalytics.com/2021/08/09/introducing-the-redwall-red-flag-analyzer-with-new-constructs-data/), we were able to test the response of 125,000 quarterly and annual financial statements to incidence of "red flag" ratios, but some of the most interesting results may have been hidden in de-listed tickers, often not available to the default R `{quantmod}` pricing sources (Yahoo Finance and Alpha Vantage). As a result, 15-25% of financial statements in New Constructs the first five years of data, could not be matched to return history, exposing our analysis to "survivor bias". Redwall's mission is multifaceted: to conduct research on topic of interest in available financial and government data, but also to explore and share how to best solve problems encountered while using R.
 
 We would love to see market sponsors make weekly or monthly prices available to the open source community, as has become almost expected in so many other areas where open data is used. Even though every closing price was once publicly disclosed in the newspaper, that doesn't mean that those prices are available for analysis, and it takes a lot of work to collect them. One of the only options suggested online, was to go to the local library and look through the stacks, but this was not feasible for a personal project involving over 900 securities. It turns out that there are several providers of financial statement data for a price. Since many other R users will likely face this same problem, one objective of this post will be to lay out the options for others looking for older and de-listed securities.
 
@@ -103,7 +103,7 @@ Some thoughts on the collected data {#some-thoughts-on-the-collected-data}
 
 We collected pricing data for an additional 400 tickers than with our original sources, so we are still missing price histories for about 500. Of these, only about 200 had 10 or more filings, so many of these were short-lived listings, and possibly not as relevant for our analysis. We also learned that in cases where the ticker had been used more than once, EOD price history would generally have the most recent, but not for the previous entity. For example, "DELL" went private in 2014 and was re-listed in 2016, so only data for the latter entity was available with EOD. In these cases, we were often able to use the Yahoo data.
 
-In addition, we learned that Yahoo sometimes gave surprising results. In the case if ticker "EOD" below, the reliability of the Yahoo data on the same dates during the early period, is shown to be very bad. Here we are showing for prices when there should be none, very small and unchanging prices in some periods, and then jumping all over the place when the history should have ended.
+In addition, we learned that Yahoo sometimes gave surprising results. In the case if ticker "EDO" below (not to be mistaken with EOD who have provided the data), the reliability of the Yahoo data on the same dates during the early period, is shown to be very bad. Here we are showing for prices when there should be none, very small and unchanging prices in some periods, and then jumping all over the place when the history should have ended.
 
 <details>
 
