text on quantmod

--- a/content/post/2021-08-19-when-yahoo-finance-doesn-t-have-de-listed-tickers-needed/index.Rmd
+++ b/content/post/2021-08-19-when-yahoo-finance-doesn-t-have-de-listed-tickers-needed/index.Rmd
@@ -50,7 +50,7 @@ Sharadar's comprehensive spreadsheet, offering certainty that needed prices woul
 
 EOD gave a [code example](https://eodhistoricaldata.com/financial-apis/r-language-example/) for accessing the API, but we struggled at first to use it with the suggested default .csv format. The error messages were confusing, and sometimes unclear if the data we needed was not available (404) or if there was a problem with the API preventing the download. Customer support was very responsive, considering they are not charging a lot for it, and after some wheel spinning, helped us to understand that using JSON would work better. By adding "&fmt=json" to the set-up string and parsing with `{jsonlite}` as in the code example below worked perfectly, and we were able to collect over 800 of our 930 missing tickers.
 
-As we were doing this, we also discovered other problems in our Yahoo Finance prices, so decided to collect the tickers we previously thought we would use from Yahoo. The [All-World](https://eodhistoricaldata.com/pricing) package allows up to 100,000 calls per day, which was more than enough, and we would be able to expand beyond the US to 60 overseas exchanges. Unlike with Alpha Vantage, these were adjusted prices. All in all, EOD seemed to be perfect for our use-case.
+As we were doing this, we also discovered other problems in our Yahoo Finance prices, so decided to collect the tickers we previously thought we would use from Yahoo. The [All-World](https://eodhistoricaldata.com/pricing) package allows up to 100,000 calls per day, which was more than enough, and we would be able to expand beyond the US to 60 overseas exchanges. EOD was felt quite a bit faster than the traditional `{quantmod}`, even when we used `{BatchGetSymbols}` for collecting a lot of tickers. Unlike with Alpha Vantage, these were adjusted prices. All in all, EOD seemed to be perfect for our use-case.
 
 <details>
 
