--- a/content/post/2022-11-27-handling-larger-than-memory-dataset-with-arrow-table/index.Rmd
+++ b/content/post/2022-11-27-handling-larger-than-memory-dataset-with-arrow-table/index.Rmd
@@ -31,7 +31,7 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
 
 # Introduction
 
-It has been a while since [loading Large, Messy CSV using {data.table} fread with CLI tools](https://redwallanalytics.com/2022/04/21/loading-a-large-messy-csv-using-data-table-fread-with-cli-tools/), but there are recently developed tools, which we didn't fully understand, to make the problem discussed in that post much more manageable. When we left off, we had used `scrubcsv` split our problematic csv into two parts, a clean 30 million-row, 28-column data set of US business addresses, and a separate problematic 1 million-rows with 22 or fewer columns. It was interesting to see what could be done on the CLI, but stacking the two significantly different subsets after splitting them seemed cumbersome considering varying column names and possibly types, when one would not fit in memory using R. The objective of this posting will be to explore how to load the two pieces of our address data into arrow tables, standardize variable types, stack and queries. One of the main themes of this blog all along is, how to become as agnostic as possible to data size, it feels like this moment may have arrived with `{arrow}` and `{duckdb}`.
+It has been a while since [loading Large, Messy CSV using {data.table} fread with CLI tools](https://redwallanalytics.com/2022/04/21/loading-a-large-messy-csv-using-data-table-fread-with-cli-tools/), but there are recently developed tools, which we didn't fully understand at the time, to make the problem discussed in that post much more manageable. When we left off, we had used `scrubcsv` split our problematic csv into two parts, a clean 30 million-row, 28-column data set of US business addresses, and a separate problematic 1 million-rows with 22 or fewer columns. It was interesting to see what could be done on the CLI, but stacking the two significantly different subsets after splitting them seemed cumbersome considering varying column names and possibly types, when one would not fit in memory using R. The objective of this posting will be to explore how to load the two pieces of our address data into arrow tables, standardize variable types, stack and queries. One of the main themes of this blog all along is, how to become as agnostic as possible to data size, it feels like this moment may have arrived with `{arrow}` and `{duckdb}`.
 
 # Other Resources
 
